# fluid-dynamics

./: README.md
FluidDynamics/: run_benchmarks.py
FluidDynamics/data/: final_state.npy
FluidDynamics/python_impl/: par_lbm.py  seq_lbm.py
FluidDynamics/reports/: Report-en.docx  Report.docx  rust_strong_scaling.csv  rust_weak_scaling.csv
FluidDynamics/rust_impl/: Cargo.toml
FluidDynamics/rust_impl/src/: main.rs  parallel.rs  sequential.rs  visualizer.rs
