[package]
name = "lbm_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
# za crtanje grafikona i vizuelizaciju (obavezno prema specifikaciji)
plotters = "0.3.5" 
rayon = "1.8"
ndarray = { version = "0.15", features = ["rayon"] }

# za precizno mjerenje vremena (neophodno za eksperimente skaliranja)
chrono = "0.4" 

# za naprednu kontrolu niti i sinhronizaciju (barijere)
crossbeam = "0.8" 

# za serijalizaciju podataka (pisanje .dat ili .csv fajlova)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"